coverflow bar fix

--- a/liboh/plugins/ogre/data/chrome/ui/css/ui.all.css
+++ b/liboh/plugins/ogre/data/chrome/ui/css/ui.all.css
@@ -128,9 +128,9 @@
 
 
 
-/*slider*/
+/*slider
 .ui-slider {
-	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
+	margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
 	font-family: Verdana, Arial, sans-serif;
 	font-size: 1.1em;
 	background: #ffffff url(images/ffffff_40x100_textures_01_flat_0.png) 0 0 repeat-x;
@@ -139,7 +139,7 @@
 	position: relative;
 }
 .ui-slider-handle {
-	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
+	margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
 	position: absolute;
 	z-index: 2;
 	top: -3px;
@@ -157,7 +157,7 @@
 	border: 1px solid #dddddd;
 }
 .ui-slider-range {
-	/*resets*/margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
+	margin: 0; padding: 0; border: 0; outline: 0; line-height: 1.3; text-decoration: none; font-size: 100%; list-style: none;
 	height: .8em;
 	background: #dadada url(images/dadada_40x100_textures_02_glass_75.png) 0 50% repeat-x;
 	position: absolute;
@@ -170,7 +170,7 @@
 	filter:Alpha(Opacity=70);
 }
 
-
+*/
 
 
 
